# orpheus

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/orpheus/: Application.hpp  Caches.hpp  Camera.hpp  Dispatcher.hpp  Engine.hpp  Entity.hpp  Exception.hpp  Font.hpp  Game.hpp  InputManager.hpp  Log.hpp  Scene.hpp  Scope.hpp  Utils.hpp  Version.hpp  Version.hpp.in  Vertex.hpp
engine/include/orpheus/Command/: Command.hpp  CommandKeyboard.hpp  CommandMouse.hpp  CommandQuit.hpp  CommandScenePop.hpp  CommandScenePush.hpp  CommandTest.hpp
engine/include/orpheus/Command/Engine/: Command.hpp  CommandKeyboard.hpp  CommandMouse.hpp  CommandQuit.hpp
engine/include/orpheus/Command/Game/: Command.hpp  CommandScenePop.hpp  CommandScenePush.hpp  CommandTest.hpp
engine/include/orpheus/Command/Material/: Command.hpp  CommandColor.hpp  CommandMatrix.hpp  CommandMatrixModel.hpp  CommandMatrixProjection.hpp  CommandMatrixView.hpp  CommandPrepare.hpp  CommandText.hpp  CommandTextRect.hpp  CommandTexture.hpp
engine/include/orpheus/Command/Render/: Command.hpp  CommandClear.hpp  CommandClearColor.hpp  CommandColor.hpp  CommandMaterial.hpp  CommandSetClearColor.hpp  CommandText.hpp  CommandVertices.hpp  RenderCommand.hpp  RenderCommandClear.hpp  RenderCommandSetClearColor.hpp  RenderCommandVertices.hpp
engine/include/orpheus/Entity/: Entity.hpp  EntityCommand.hpp  EntityCube.hpp  EntityRect.hpp  EntityText.hpp
engine/include/orpheus/Entity/UI/: EntityButton.hpp
engine/include/orpheus/Event/: Event.hpp  EventKeyboard.hpp  EventLoadScene.hpp  EventMouse.hpp  EventQuit.hpp  EventScenePop.hpp  EventScenePush.hpp  EventTest.hpp
engine/include/orpheus/Image/: Image.hpp
engine/include/orpheus/Image/loaders/: LoaderPNG.hpp
engine/include/orpheus/Input/: InputManager.hpp  Keys.hpp
engine/include/orpheus/Material/: Material.hpp  MaterialFlatColor.hpp  MaterialText.hpp
engine/include/orpheus/Material/Command/: Command.hpp  CommandColor.hpp  CommandMatrix.hpp  CommandMatrixModel.hpp  CommandMatrixProjection.hpp  CommandMatrixView.hpp  CommandPrepare.hpp  CommandTexture.hpp
engine/include/orpheus/Material/FlatColor/: MaterialFlatColor.hpp
engine/include/orpheus/Material/Text/: MaterialText.hpp  TextAppearance.hpp
engine/include/orpheus/Material/Text/Command/: CommandGlyphAppearance.hpp  CommandGlyphModel.hpp  CommandGlyphRect.hpp
engine/include/orpheus/Math/: Color.hpp  Matrix.hpp  Vector.hpp
engine/include/orpheus/Render/: Render.hpp  RenderOpenGL.hpp
engine/include/orpheus/Render/Command/: Command.hpp  CommandClear.hpp  CommandClearColor.hpp  CommandGetTextSize.hpp  CommandGetTextWidth.hpp  CommandMaterial.hpp  CommandText.hpp  CommandVertices.hpp  CommandViewport.hpp
engine/include/orpheus/Render/impl/OpenGL/: OpenGL.hpp  RenderOpenGLImpl.hpp
engine/include/orpheus/Render/impl/OpenGL/Material/: Material.hpp  (+2 more)
engine/include/orpheus/Texture/: Texture.hpp
engine/include/orpheus/Texture/loaders/: LoaderPNG.hpp
engine/include/orpheus/Window/: Window.hpp  WindowGLFW.hpp  WindowSDL.hpp
engine/include/orpheus/Window/impl/: WindowGLFWImpl.hpp  WindowSDLImpl.hpp
engine/include/orpheus/async/: Executor.hpp
engine/include/orpheus/interface/: IInput.hpp  IMath.hpp  IPhysics.hpp  IRender.hpp  IRenderContext.hpp  IWindow.hpp
engine/src/: Application.cpp  Camera.cpp  Engine.cpp  Entity.cpp  Exception.cpp  Font.cpp  Game.cpp  InputManager.cpp  Scene.cpp  Utils.cpp
engine/src/Image/: Image.cpp
engine/src/Math/: Color.cpp  Matrix.cpp
engine/src/Render/: Render.cpp  RenderOpenGL.cpp
engine/src/Render/impl/: RenderOpenGLImpl.cpp
engine/src/Render/impl/OpenGL/: OpenGL.cpp
engine/src/Texture/: Texture.cpp
engine/src/Window/: WindowGLFW.cpp  WindowSDL.cpp
engine/src/Window/impl/: WindowGLFWImpl.cpp  WindowSDLImpl.cpp
engine/src/async/: Executor.cpp
game/: CMakeLists.txt
game/cmake/: build_nlohmann.cmake  build_perlin.cmake  build_sdl2.cmake
game/include/: ApplicationTest.hpp  GameTest.hpp  ScopedGame.hpp  Version.hpp  Version.hpp.in
game/include/Entities/: EntityReel.hpp  EntityReelCell.hpp  EntityRoll.hpp
game/include/Scenes/: SceneLevel.hpp  SceneLevel01.hpp  SceneMainMenu.hpp  SceneMenu.hpp  SceneMenuMain.hpp
game/res/: ltc_mag.dds  noise.pbm
game/res/fonts/bad-script/: layout.json
game/res/fonts/noto-sans-mono/: layout.json
game/res/fonts/ubuntu-mono/: charset.txt  layout.json
game/res/shaders/blit/: fragment.glsl
game/res/shaders/blur/: fragment.glsl
game/res/shaders/brdf/: fragment.glsl  vertex.glsl
game/res/shaders/brdf_gbuffer/: fragment.glsl  vertex.glsl
game/res/shaders/combine/: fragment.glsl  vertex.glsl
game/res/shaders/denoise/: fragment.glsl  fragment2.glsl  fragment3.glsl  fragment4.glsl  vertex.glsl
game/res/shaders/flat_color/: fragment.glsl  vertex.glsl
game/res/shaders/ggx/: fragment.glsl  fragment2.glsl  vertex.glsl
game/res/shaders/text/: fragment.glsl  vertex.glsl
game/res/textures/ltc/ggx/: ltc_1  ltc_2  mat
game/src/: ApplicationTest.cpp  GameTest.cpp  main.cpp
game/src/Scenes/: SceneLevel.cpp  SceneLevel01.cpp  SceneMainMenu.cpp  SceneMenuMain.cpp
math/cglm/: CMakeLists.txt
math/cglm/cmake/: build_cglm.cmake
math/cglm/include/math/cglm/: CGLM.hpp  Version.hpp.in
math/cglm/src/: CGLM.cpp
physics/bullet/: CMakeLists.txt
physics/bullet/cmake/: build_bullet.cmake
physics/bullet/include/physics/bullet/: Bullet.hpp  Version.hpp.in
physics/bullet/src/: Bullet.cpp
physics/physx/: CMakeLists.txt  physx_patch.diff  physx_patch2.diff
physics/physx/cmake/: build_physx.cmake
physics/physx/include/physics/physx/: PhysX.hpp  Version.hpp.in
physics/physx/src/: PhysX.cpp
render/opengl/: CMakeLists.txt
render/opengl/cmake/: build_assimp.cmake  build_glew.cmake  build_png.cmake  build_zlib.cmake
render/opengl/include/render/opengl/: OpenGL.hpp  PNGReader.hpp  Version.hpp.in
render/opengl/src/: OpenGL.cpp  PNGReader.cpp
render/vulkan/: CMakeLists.txt
render/vulkan/include/render/vulkan/: Version.hpp.in  Vulkan.hpp
render/vulkan/src/: Vulkan.cpp
(+23 files in other folders)
